   * Fix crash in visual sync - thx fusefib
   * Fix crash in export ssa styles w dup style name - thx A-Winters
   * Fix crash in bd sup edit when changing color/resolution/alpha
   * Fix crash in generate blank video with no sub loaded
   * Fix for remove ASSA line as empty - thx Leon
   * Fix for finding delay in mkv - thx cyzs233/signedout
   * Fix bd sup edit quick OCR


3.6.6 (25th May 2022)
* NEW:
   * Add toolbar icon for iTT properties - thx Leon
   * Add new sub format - thx Sergiy
   * Option to turn off "word split list" in UI 
   * Custom file ext for custom text formats - thx Leon
   * Add shortcut for speech recognition - thx lambdacore12
   * Add CPS calculation rule "No space/punctuation" - thx MMT Gouenji-Tech
   * Add some support for reading Manzanita dvb format - thx thehulk
   * Add batch audio-to-text (speech recognition) - thx voska7
* IMPROVED:
   * Update Bulgarian translation - thx Калин
   * Update Hungarian translation - thx Zityi
   * Update Chinese translation - thx nkh0472
   * Update Portuguese translation - thx hugok79
   * Update French translation - thx Pierre
   * Update Korean translation - thx domddol
   * Update Italian translation - thx bovirus
   * Update dotnet framework to 4.8
   * Update Tesseract OCR to 5.1.0
   * Update Vosk to 0.3.38
   * Update yt-dlp.exe to 2022.05.18 (not renamed to youtube-dl.exe anymore)
   * Add some new English names - thx Omair
   * Add err msg if user OCR fix replacelist invalid - thx sialivi
   * Improve burn-in settings - thx Leon 
   * Add AMD support (hevc_amf + h264_amf) for burn-in - thx MMT Gouenji - Tech
   * Support curly brackets in export custom text - thx Leon
   * BD edit - always open bdsup raw (no merging)
   * Use "UTF-8" in uppercase for .itt files - thx Murat
   * Separate vertical margins in BD sup editor - thx von Suppé
   * Add new models for audio-to-text - thx Stefan
   * Improve ASSA support for "Remove Leading '...'" - thx von Suppé